# interactive-ink

./: Dockerfile  README.md  fly.toml  pyproject.toml
ii/: __init__.py
ii/clients/: openai_storyteller.py
ii/clients/templates/: llama_templates.py
ii/router/: story.py
ii/schema/: __init__.py  chat_message.py  enums.py  story.py
interactive-ink/: __init__.py
